Armitage Changelog
==================

In Progress
---------

- Armitage YAML parser now accepts quoted strings in the YAML fields
- Added caching of sessions.list, db.hosts, and db.services to Armitage 
  collaboration server. This should help prevent msfrpcd from overloading
  when many clients are connected and owning at once.
- Import hosts, clear hosts, and attack launches now happen in their own
  thread to make the GUI feel more responsive

27 Feb 11 Changes
---------
- Webcam snap features works again. Sorry about that. :)
- Download file button in file browser now works through the collaboration
  server. This feature has a few limitations / requirements:

  1) Armitage server must have the same $PWD as msfrpcd
  2) Files must download in less than 12s or else you'll need to retrieve
     them from the msfrpcd host.
  3) Recursive downloads of files from a directory are kept on the host with
     msfrpcd. You'll need to retrieve them with sftp or something else.

25 Feb 11 Changes
---------

This release is primarily bug fixes. The network attack collaboration 
feature is further tested and ready for your use.

See: http://www.youtube.com/watch?v=coF8dVLBnOQ

- Armitage now consumes data from msfrpcd's stderr when Start MSF button is
  used. This means Armitage won't lock up when database tables are 
  initialized during the first run on Windows.
- pivoting, logins, hail mary, and pass-the-hash now print to the event log.
- Pass-the-hash dialog is now available via [host] -> Login -> psexec.
- Fixed bug causing Event Log menu to be present outside of collab mode.
- armitage.sh start-up shell script is now named armitage
- Console destroy and shell unlocking commands on tab close now happen in a
  new thread to prevent the GUI from blocking.
- Armitage now stops meterpreter read thread when it detects a dead session.
- Replaced jyaml with a quick and dirty parser that doesn't mistake ####e#