@@ -8,8 +8,11 @@ In Progress
 - Added caching of sessions.list, db.hosts, and db.services to Armitage 
   collaboration server. This should help prevent msfrpcd from overloading
   when many clients are connected and owning at once.
-- Import hosts, clear hosts, and attack launches now happen in their own
-  thread to make the GUI feel more responsive
+- Improved GUI responsiveness:
+  -- Import hosts, clear hosts, and attack launches now happen in their 
+     own thread
+  -- Console interaction now sends text to server in a separate thread
+     to avoid blocking while waiting for the server to ack the text.
 
 27 Feb 11 Changes
 ---------
